--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ android {
         each { type ->
             type.buildConfigField 'String', 'MigrationSecretKey', MIGRATION_SECRET_KEY
         }
+        jackOptions {
+            enabled true
+        }
     }
     buildTypes {
         release {
@@ -23,10 +26,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -37,6 +44,7 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.0'
     compile 'com.google.firebase:firebase-database:10.0.1'
     testCompile 'junit:junit:4.12'
+    compile files('libs/jBCrypt-0.4.jar')
 }
 
 
